--- a/lena-experthair/index.html
+++ b/lena-experthair/index.html
@@ -20,7 +20,6 @@
 
 <body>
     <!-- додати id для навігації -->
-    <!-- подивитись у минулій роботі іконки -->
     <div class="wrapper">
         <section class="home">
 
@@ -35,11 +34,11 @@
 
 
                     <ul class="menu">
-                        <li><a class="menu__item" href="#">About</a></li>
-                        <li><a class="menu__item" href="#">Info</a></li>
-                        <li><a class="menu__item" href="#">Price</a></li>
-                        <li><a class="menu__item" href="#">Product</a></li>
-                        <li><a class="menu__item" href="#">Contact</a></li>
+                        <li><a class="menu__item" href="#" id="about">About</a></li>
+                        <li><a class="menu__item" href="#" id="info">Info</a></li>
+                        <li><a class="menu__item" href="#" id="price">Price</a></li>
+                        <li><a class="menu__item" href="#" id="product">Product</a></li>
+                        <li><a class="menu__item" href="#" id="contact">Contact</a></li>
                     </ul>
                 </header>
 
@@ -59,7 +58,7 @@
         </section>
 
 
-        <section class="about">
+        <section class="about" id="about">
             <div class="container">
                 <div class="about__content">
                     <div class="about__image">
@@ -91,7 +90,7 @@
             </div>
         </section>
 
-        <section class="info">
+        <section class="info" id="info">
             <div class="container">
                 <div class="info__content">
                     <h1 class="info__title big-title">Інфо</h1>
@@ -175,7 +174,7 @@
                 </div>
         </section>
 
-        <section class="price">
+        <section class="price" id="price">
             <div class="container">
                 <h1 class="price__title big-title">Кератин</h1>
 
@@ -419,7 +418,7 @@
 
         </section>
 
-        <section class="product">
+        <section class="product" id="product">
             <div class="container">
                 <div class="product__content">
 
@@ -445,7 +444,7 @@
             </div>
         </section>
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="container">
                 <div class="contact__content">
                     <h1 class="contact__title">Social media</h1>
