--- a/lena-experthair/index.html
+++ b/lena-experthair/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- додати id для навігації -->
     <div class="wrapper">
-        <section class="home">
+        <section class="home" id="home">
 
             <div class="container">
 
@@ -34,11 +34,11 @@
 
 
                     <ul class="menu">
-                        <li><a class="menu__item" href="#" id="about">About</a></li>
-                        <li><a class="menu__item" href="#" id="info">Info</a></li>
-                        <li><a class="menu__item" href="#" id="price">Price</a></li>
-                        <li><a class="menu__item" href="#" id="product">Product</a></li>
-                        <li><a class="menu__item" href="#" id="contact">Contact</a></li>
+                        <li><a class="menu__item" href="#about">About</a></li>
+                        <li><a class="menu__item" href="#info">Info</a></li>
+                        <li><a class="menu__item" href="#price">Price</a></li>
+                        <li><a class="menu__item" href="#product">Product</a></li>
+                        <li><a class="menu__item" href="#contact">Contact</a></li>
                     </ul>
                 </header>
 
@@ -174,7 +174,7 @@
                 </div>
         </section>
 
-        <section class="price" id="price">
+        <section class="price" id="price" id="кератин">
             <div class="container">
                 <h1 class="price__title big-title">Кератин</h1>
 
@@ -235,7 +235,7 @@
 
         </section>
 
-        <section class="price yellow">
+        <section class="price yellow" id="фарбування">
             <div class="container">
                 <h1 class="price__title big-title">Фарбування</h1>
 
@@ -296,7 +296,7 @@
 
         </section>
 
-        <section class="price yellow">
+        <section class="price yellow" id="cкладне_фарбування">
             <div class="container">
                 <h1 class="price__title big-title">Складне Фарбування</h1>
 
@@ -357,7 +357,7 @@
 
         </section>
 
-        <section class="price green">
+        <section class="price green" id="стрижка">
             <div class="container">
                 <h1 class="price__title big-title">Стрижка</h1>
 
@@ -484,17 +484,18 @@
                     </a>
                     <div class="footer__menu">
                         <ul class="footer__menu-list">
-                            <li><a class="footer__menu-item" href="#">Home</a></li>
-                            <li><a class="footer__menu-item" href="#">About</a></li>
-                            <li><a class="footer__menu-item" href="#">Info</a></li>
-                            <li><a class="footer__menu-item" href="#">Product</a></li>
-                            <li><a class="footer__menu-item" href="#">Contact</a></li>
+                            <li><a class="footer__menu-item" href="#home">Home</a></li>
+                            <li><a class="footer__menu-item" href="#about">About</a></li>
+                            <li><a class="footer__menu-item" href="#info">Info</a></li>
+                            <li><a class="footer__menu-item" href="#product">Product</a></li>
+                            <li><a class="footer__menu-item" href="#contact">Contact</a></li>
                         </ul>
                         <ul class="footer__menu-list">
-                            <li><a class="footer__menu-item" href="#">Price</a></li>
-                            <li><a class="footer__menu-item thin" href="#">keratin</a></li>
-                            <li><a class="footer__menu-item thin" href="#">hair color</a></li>
-                            <li><a class="footer__menu-item thin" href="#">haircut</a></li>
+                            <li><a class="footer__menu-item" href="#price">Price</a></li>
+                            <li><a class="footer__menu-item thin" href="#кератин">кератин</a></li>
+                            <li><a class="footer__menu-item thin" href="#фарбування">фарбування</a></li>
+                            <li><a class="footer__menu-item thin" href="#складне_фарбування">складне_фарбування</a></li>
+                            <li><a class="footer__menu-item thin" href="#стрижка">стрижка</a></li>
                         </ul>
                     </div>
                     <div class="footer__info">
